Resolves: tdf#119572 addressee/sender formatting swapped

Change-Id: Icdb2ca0362711e87edcb952fb52117502d80d328
Reviewed-on: https://gerrit.libreoffice.org/59795
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>